# fastdiv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fastdiv.yml
src/: lib.rs
tests/: test.rs
tests/no_std/: Cargo.toml
tests/no_std/src/: main.rs
